force-app/main/default/objects/Template__c/Template__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store the custom templates for email and sms</description>
    <label>Template</label>
    <nameField>
        <displayFormat>EXT-{0000}</displayFormat>
        <label>Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>