force-app/main/default/objects/Template__c/fields/Template_pattern__c.field-meta.xml
<CustomField>
    <fullName>Template_pattern__c</fullName>
    <label>Template pattern</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>quickTemplate</fullName>
            </value>
            <value>
                <fullName>emailTemplate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>